kubernetes/kube-system/envoy-gateway/gateways/gateway.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tailscale-gateway
  namespace: kube-system
spec:
  gatewayClassName: eg-tailscale
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.eviljungle.com"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.eviljungle.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: acme-crt-secret
            namespace: cert-manager
